...
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        android:text="@string/search_button" />

    <Button
        android:id="@+id/toDetailsActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/searchMainActivityButton"
        android:text="@string/to_details" />

...
